crates/kdl-config-derive/tests/ui/children_non_vec.stderr
error: child/children placement is incompatible with scalar types
 --> tests/ui/children_non_vec.rs:5:5
  |
5 |     #[kdl(children)]
  |     ^
